--- a/cohorts/6/index.css
+++ b/cohorts/6/index.css
@@ -1,58 +1,81 @@
 #title > h1 {
-  color: white;
+  color: black;
+  line-height: 55px;
+  font-size: 65px;
+  opacity: 0.85;
+  white-space: nowrap;
+  position: absolute;
+  right: 100%;
+  transform-origin: top right 0;
+  transform: rotate(270deg);
+}
+
+.secondary {
+  color: purple;
+  display: block;
+  margin-left: 30px;
 }
 
 #cohort {
   display: flex;
-  justify-content: center;
-  font-size: 18px;
+  justify-content: flex-start;
+  margin-left: 80px;
+  font-size: 22px;
   color: rgb(27, 20, 129);
   font-family: "Lucida Console", Courier, monospace;
 }
+
+.myButton {
+  background: linear-gradient(to bottom, #1b1481 5%, #1b1481 100%);
+  background-color: #1b1481;
+  border-radius: 28px;
+  border: 1px solid #1b1481;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 17px;
+  padding: 17px 28px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, #1b1481 5%, #1b1481 100%);
+  background-color: #1b1481;
+}
+#buttonPosition {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 50px;
+  margin-left: 80px;
+}
 h1 {
-  color: blue;
+  color: navy;
   font-family: "Lucida Console", Courier, monospace;
   display: flex;
   justify-content: center;
-}
-
-.logo {
-  height: 250px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: auto;
 }
 
 .all {
   display: flex;
   flex-direction: row;
+  margin-left: 30px;
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  width: 350px;
   height: auto;
   margin: auto;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
-  background: white;
+  background: lightcyan;
 }
 
 .title {
   color: grey;
-  font-size: 18px;
-}
-
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
   font-size: 18px;
 }
 
@@ -69,12 +92,14 @@ a:hover {
 
 body {
   background-image: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png");
+  background-size: cover;
 }
 
 .motto {
   color: rgb(27, 20, 129);
   font-family: "Lucida Console", Courier, monospace;
-  font-size: 15px;
-  display: flex;
-  justify-content: center;
+  font-size: 22px;
+  margin-left: 80px;
+  margin-bottom: 10px;
+  margin-top: 30px;
 }
