--- a/cohorts/8/index.css
+++ b/cohorts/8/index.css
@@ -1,3 +1,61 @@
+.teaminstruction {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 17px;
+    font-family: 'Montserrat', sans-serif;;
+    color: rgb(61, 61, 61);
+}
+
+div > a {
+    text-decoration: none;
+    color: black;
+}
+
+.nav {
+    width: 100%;
+    height: 80px;
+    background-color: #1B2337;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item-wrapper{
+    margin-right: 100px;
+}
+
+.nav-item-logo{
+    margin-left: 100px;
+}
+
+
+.logo {
+    margin-top: 10px;
+    width:130px;
+    height:80px;
+    background-image: url(resources/logo.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 50px;
+}
+
+.nav-menu{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 17px;
+    text-decoration: none;
+    color: white;
+    margin-right: 25px;
+    font-weight: 700;
+    transition-duration: 200ms;
+}
+
+.nav-menu:hover {
+    color: #FF6A3D;
+    text-decoration: none;
+}
+
+
 .center {
     display: flex;
     justify-content: center;
@@ -6,46 +64,229 @@
 }
 
 .header-section {
-    width: 100vw;
-    height: 80vh;
+    width: 100%;
+    height: 83vh;
+    background-color: #1B2337;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 80px;
+    padding-bottom: -10px;
+    position: relative;
+}
+/* scroll animation START for header section*/
+.scroll-downs {
+  position: absolute;
+  right: 0;
+  bottom: 2px;
+  left: 0;
+  margin: auto;
+
+  width :34px;
+  height: 55px;
+}
+.mousey {
+  width: 3px;
+  padding: 12px 15px;
+  height: 35px;
+  border: 2px solid #fff;
+  border-radius: 25px;
+  opacity: 0.75;
+  box-sizing: content-box;
+  padding-right: 17px;
+}
+.scroller {
+  width: 7px;
+  height: 7px;
+  border-radius: 100%;
+  background-color: #fff;
+  animation-name: scroll;
+  animation-duration: 2.2s;
+  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(15px); opacity: 0;}
 }
 
+/* scroll animation END for header section*/
+
+.changing {
+    color: #9DAAF2;
+}
+
+.header-section-info-left {
+    padding-left: 100px;
+    width: 50%;
+    height: 100%;
+    float: left;
+    margin-top: 140px;
+}
+
+.header-section-right{
+    width: 50%;
+    height: 100%;
+    float: right;
+}
+
+.header-illustration{
+    width: 775px;
+    height: 775px;
+    background-image: url(resources/main-illustration.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.header-section-description {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 37px;
+    font-weight: 600;
+    margin-top: -17px;
+}
+
+.span-orange{
+    color: #FF6A3D;
+
+}
+
+.span-blue {
+    color: #1B2337;
+}
+
+.wave-SVG-head-section{
+    width: 100%;
+}
+
+.span-wave {
+  background: url("resources/SVG/wave.svg");
+  background-position-x: 0%;
+  background-position-y: 0%;
+  background-repeat: repeat-x;
+  background-size: 29px 8px; 
+  background-position: 2px 75px;
+  animation: move 15s linear infinite;
+  -webkit-animation: move 15s linear infinite;
+  animation-play-state: running;
+  text-decoration: none;
+  -webkit-text-decoration-skip: objects;
+}
+
+@-webkit-keyframes move {
+    from {
+        background-position: 2px 75px;
+      }
+      to {
+        background-position: 500px 75px;
+      }
+    }
+    
+    @keyframe move {
+    from {
+        background-position: 2px 75px;
+      }
+      to {
+        background-position: 500px 75px;
+      }
+    }
+
 .cohort-title {
-    margin-bottom: 30px;
-    font-size: 60px;
+    margin-bottom:65px;
+    font-size: 70px;
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
+    color: white;
 }
 
 .rick-roll-btn{
+    margin-top: 20px;
     padding-left: 35px;
     padding-right: 35px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 17px;
+    padding-bottom: 17px;
     border-radius: 300px;
-    border-color: orange;
-    color: orange;
-    background-color: white;
+    border-color: #F9DB6D;
+    color: #1B2337;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-width: 4px;
+    letter-spacing: 2px;
+    background-color: #F9DB6D;
     transition-duration: 300ms;
+    border: solid #F9DB6D;
+    font-size: 14px;
 }
 
 .rick-roll-btn:hover{
+    margin-top: 20px;
     padding-left: 35px;
     padding-right: 35px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 17px;
+    padding-bottom: 17px;
     border-radius: 300px;
-    border-color: orange;
-    color: white;
-    background-color: orange;
+    border-color: #F9DB6D;
+    color: #F9DB6D;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-width: 4px;
+    letter-spacing: 2px;
+    background-color: #1B2337;
+    transition-duration: 300ms;
+    border: solid #F9DB6D;
+    cursor: pointer;
 }
+
+.translateBtn{
+    margin-top: 20px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    border-radius: 300px;
+    border-color: #F9DB6D;
+    color: #1B2337;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-width: 4px;
+    letter-spacing: 2px;
+    background-color: #F9DB6D;
+    transition-duration: 300ms;
+    border: solid #F9DB6D;
+}
+
+.translateBtn:hover{
+    margin-top: 20px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    border-radius: 300px;
+    border-color: #F9DB6D;
+    color: #F9DB6D;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-width: 4px;
+    letter-spacing: 2px;
+    background-color: white;
+    transition-duration: 300ms;
+    border: solid #F9DB6D;
+}
+
+.card-size{
+    color: #1B2337;
+}
+
 .team-members {
     display: flex;
     flex-direction: column;
-    width: 100vw;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    width:100%;
+    padding-top: 90px;
+    padding-bottom: 40px;
     background-color: #eee;
     
 }
@@ -59,97 +300,117 @@
 }
 .motto-section {
     color: white;
-    height: 60vh;
-    width: 100vw;
-    background-image: url(https://source.unsplash.com/l6I8jpzKJQU);
+    height: 40vh;
+    width: 100%;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
 }
-.pokemon-img {
-    height: 100%;
-    width: 100%;
-    background-image: url("https://img.pokemondb.net/artwork/large/vulpix.jpg");
-    background-position: center;
-    background-size: contain;
 
-
-}
-.mascot {
-    width: 100vw;
-    height: 50vh;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-.mascot-right {
-    height: 100%;
-    width: 50%;
-    float: right;
-}
 .emily-pic {
+    transition-duration: 200ms;
     height: 200px;
     width: 200px;
-    background-color: red;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4E03AQFZjraEy0e1NA/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=KKDBByoPliSjX-uBJWBFBXvmS-DKoLTScja5fPmd2fo);
 }
+
+.emily-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png);
+    background-size: contain;
+}
+
 .kelly-pic {
+    transition-duration: 200ms;
     height: 200px;
     width: 200px;
-    background-color: blue;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4D03AQH5GahuWIMT7A/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=hsykkRHIyQlBqbEFptFlQGsxGpkIk5jpMeLzHiuT6bI);
 }
+
+.kelly-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/039.png);
+    background-position: center;
+    background-size: contain;
+}
+
 .harry-pic {
+    transition-duration: 200ms;
     height:200px;
     width: 200px;
-    background-color: green;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4D03AQEGSg1QpdWawQ/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=23pym7Y6nyniPau-YZHg8oi2Qs9kRTduaA50pLP1c8k);
 }
+
+.harry-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png);
+    background-size: contain;
+}
+
 .neel-pic {
+    transition-duration: 200ms;
     height:200px;
     width: 200px;
-    background-color: black;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C5603AQHD9ACYetI7WA/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=MWCxeZqV19CaiyjWFZWohQB82rkfTmnuOCCoN_4VZhs);
 }
+
+.neel-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/018.png);
+    background-size: contain;
+}
+
 .lily-pic {
+    transition-duration: 200ms;
     height:200px;
     width: 200px;
-    background-color: violet;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4D03AQEC3uNs96dkoQ/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=HOf1upa9ww7Wy61CDH3VONLlevhFNjb485CnAjKO0pA);
 }
+
+.lily-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png);
+    background-size: contain;
+}
+
 .sanjana-pic {
+    transition-duration: 200ms;
     height:200px;
     width: 200px;
-    background-color: pink;
     border-radius: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4E03AQF0WfpDSY_0qA/profile-displayphoto-shrink_400_400/0?e=1606953600&v=beta&t=A9SHMpyubf0pP_PEJV9mI9OVVuZ9HvJ3vvTtevBniCo);
 }
+
+.sanjana-pic:hover {
+    background-image: url(https://assets.pokemon.com/assets/cms2/img/pokedex/full/035.png);
+    background-size: contain;
+}
+
 .motto-title {
     color: rgb(46, 46, 46);
     font-size: 60px;
     margin-bottom: 20px;
+    margin-top: -150px;
     font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
 }
 .motto-description {
     color: rgb(46, 46, 46);
-    font-size: 35px;
+    font-size: 55px;
+    font-family: 'Libre Barcode 128 Text', cursive;
 }
 .team-member-first-row {
     display: flex;
@@ -163,3 +424,103 @@
     align-items: center;
 }
 
+
+.team-title{
+    color: rgb(46, 46, 46);
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 30px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.fixed-image-section {
+    width: 100%;
+    height: 60vh;
+    background: linear-gradient(90deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 100%), url(https://source.unsplash.com/KE0nC8-58MQ);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.hashtag{
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    transition-duration: 300ms;
+}
+
+.hashtag:hover {
+    color: orange;
+    cursor: pointer;
+}
+
+.bogInsta{
+    text-decoration: none;
+}
+
+.bogInsta:hover{
+    text-decoration: none;
+}
+
+.team-member-name {
+    text-decoration: none;
+    color: black;
+    transition-duration: 200ms;
+    margin-top: 10px;
+}
+
+.team-member-name:hover {
+    text-decoration: none;
+    color: rgb(216, 150, 27);
+}
+
+.teamsection-svg {
+    width:100%;
+    margin-top: -20px;
+}
+
+.mascot {
+    width: 100%;
+    height: 100vh;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.mascot-header-wrapper {
+    margin-top: -90px;
+    margin-left: 100px;
+}
+
+.mascot-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 50px;
+}
+
+.mascot{
+    padding: 0px;
+    margin: 0px;
+    position: relative;
+}
+
+.vulpixPic1{
+    margin-top: 50px;
+    width: 600px;
+    height: 400px;
+    background: url(../8/resources/git/vulpix.gif);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 100px;
+    position: relative;
+    z-index: 30;
+}
+
+.vulpixPic1BG{
+    width: 600px;
+    height: 400px;
+    background-color: rgb(255, 165, 129);
+    position: absolute;
+    z-index: 29;
+    top: 130px;
+    left: 130px;
+}
