--- a/cohorts/6/index.css
+++ b/cohorts/6/index.css
@@ -1,5 +1,5 @@
 #title > h1 {
-  color: black;
+  color: rgb(27, 20, 129);
   line-height: 55px;
   font-size: 65px;
   opacity: 0.85;
@@ -100,6 +100,5 @@ body {
   font-family: "Lucida Console", Courier, monospace;
   font-size: 22px;
   margin-left: 80px;
-  margin-bottom: 10px;
   margin-top: 30px;
 }
