--- a/cohorts/3/index.css
+++ b/cohorts/3/index.css
@@ -1,29 +1,71 @@
-.title {
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 10% 90%;
+    margin-top: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+#bigcorgi {
+    width:150px;
+    height:150px;
+    grid-column: 1 / 2;
+}
+
+#title {
+    grid-column: 2 / 3;
     color: lightblue;
-    font-size: 80px;
+    font-size: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    text-align: left;
+    padding-left: 100px;
+    padding-top: 40px;
+}
 
-}
-h2{
-    font-size: 60;
-    color: orange
-}
-.motto {
+#motto {
+    grid-column: 1 / 3;
     font-style: italic;
-    font-size: 40;
+    padding: 30px;
+    /* font-size: 40; */
+    margin: 0;
 }
 
+h2 {
+    color: orange;
+    font-size: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    margin: 0;
+}
 
-div {
+#main-body {
+    grid-column: 1/3;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#images {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 30px;
 }
 
-div img {
-    width:25%;
-    height:20%;
-
+.profile {
+    border-radius: 50%;
+    width: 180px;
+    padding: 8px;
+    border: 1px solid;
+    margin: 20px;
 }
-.bigcorgi {
-    max-width:40%;
-    height:40%;
+
+.caption {
+    text-align: center;
+    margin: 0;
 }
