--- a/cohorts/5/index.css
+++ b/cohorts/5/index.css
@@ -18,6 +18,11 @@ h2 {
     justify-content: center;
     flex-wrap: nowrap;
 }
+p {
+   display: flex;
+   justify-content: center;
+   flex-wrap: nowrap;
+}
 
 body {
     background-color: orange;
