--- a/cohorts/5/index.css
+++ b/cohorts/5/index.css
@@ -1,18 +1,8 @@
-/*DEFAULT GLOBAL SETTINGS*/
-
-/* these are variables in css for the root scope*/
-:root {
-   --primary-color: #e50914;
-   --dark-color: #141414;
-}
-
-
 * {
-   box-sizing: border-box; /*padding doesn't affect width*/
+   box-sizing: border-box;
    margin: 0;
    padding: 0;
 }
-
 
 body {
    font-family: 'Arial', sans-serif;
@@ -22,7 +12,7 @@ body {
 }
 
 ul {
-   list-style: none; /*base styling for everything*/
+   list-style: none; 
 }
 
 h1, h2, h3, h4 {
@@ -35,13 +25,12 @@ a { /*for anything links*/
 }
 
 p {
-   margin: 0.5rem 0; /*want some sort of padding*/
+   margin: 0.5rem 0;
 }
 
 img {
-   width: 100%; /*images take up 100% of the container*/
+   width: 100%; 
 }
-
 
 .showcase {
    width: 100%;
@@ -50,8 +39,6 @@ img {
    background: url('../5/assets/logo.jpg') no-repeat center center/cover;
 }
 
-
-
 .showcase::after {  
    content: ''; 
    position: absolute;
@@ -59,15 +46,15 @@ img {
    left: 0;
    width: 100%;
    height: 100%;  
-   z-index: 1; /*makes it on top of everything */
+   z-index: 1;  
    background: rgba(0,0,0, 0.6);
    box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000; 
 }
 
 .showcase-top {
-   position: relative; /*position the logo absolute and the button*/
+   position: relative; 
    height: 90px; 
-   z-index: 2; /* put everything above it so text is on top SO OVERLAY is below (z=1 */
+   z-index: 2;  
 }
 
 .showcase-top img {
@@ -75,10 +62,10 @@ img {
    position: absolute;  
    top: 50%; 
    left: 50%;
-   transform: translate(-50%, -30%); /*makeup for letters itself*/
+   transform: translate(-50%, -30%); 
 }
 
-.showcase-top a{ /*the only link in showcase top*/
+.showcase-top a{ 
    position: absolute;
    top: 50%;
    right: 0;
@@ -89,19 +76,19 @@ img {
    position: relative;
    z-index: 2;
    margin: auto;
-   display: flex; /* everything currently lined up horizontally but we want vertically*/
-   flex-direction: column; /* make it verical*/
+   display: flex; 
+   flex-direction: column;  
    justify-content: center;
-   align-items: center; /*make everything go to center */
+   align-items: center; 
    text-align: center;
-   margin-top: 9rem; /*move everything down */ 
+   margin-top: 9rem; 
 }
 
 .showcase-content h1 {
    font-weight: 700;
    font-size: 5.2rem;
-   line-height: 1.1; /*1.1m */
-   margin: 0 0 2rem; /* margin bottom 2rem and 0 everywhere else*/
+   line-height: 1.1;  
+   margin: 0 0 2rem;  
 
 }
 
@@ -127,9 +114,7 @@ a:link{
  }
  
  html {
- 
    box-sizing: border-box;
- 
  }
  
  body {
@@ -159,7 +144,7 @@ a:link{
  
  img{
    width: 100%;
-   height:100%;
+   height: 100%;
    object-fit: cover;
    border-radius: 25px 25px 0px 0px;
    object-position: 50% 50%;
@@ -173,6 +158,10 @@ a:link{
    margin-bottom: 25px;
    background-color: #000;
  
+ }
+
+ .card img {
+    height: 400px;
  }
  
  .about-section {
@@ -294,6 +283,29 @@ ul {
     display: flex;
 }
 
+.footer-content {
+   position: relative;
+   z-index: 2;
+   margin: auto;
+   display: flex; /* everything currently lined up horizontally but we want vertically*/
+   flex-direction: column; /* make it verical*/
+   justify-content: center;
+   align-items: center; /*make everything go to center */
+   text-align: center;
+   margin-top: 9rem; /*move everything down */ 
+ }
+ .gif {
+   position: absolute;
+   display: flex;
+   max-width: 90%;
+   max-height: 60%;
+   top: 50%;
+   left: 50%;
+   -ms-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);   
+   padding: 15px;
+ }
+
 .footer {
 	max-width: 100%;
    margin: 1rem auto;
@@ -307,8 +319,30 @@ ul {
 }
 
 .footer p {
-	margin-bottom: 1.5rem;
+   padding: 50px;
+   position: relative;
+   font-family: sans-serif;
+   text-transform: uppercase;
+   font-size: 2em;
+   letter-spacing: 4px;
+   overflow: hidden;
+   background: linear-gradient(90deg, #000, #fff, #000);
+   background-repeat: no-repeat;
+   background-size: 80%;
+   animation: animate 5s linear infinite;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: rgba(255, 255, 255, 0);
+   
 }
+ 
+ @keyframes animate {
+   0% {
+     background-position: -500%;
+   }
+   100% {
+     background-position: 500%;
+   }
+ }
 
 .footer .footer-cols {
 	display: grid;
