--- a/cohorts/1/index.css
+++ b/cohorts/1/index.css
@@ -1,7 +1,7 @@
 body{
-    margin: 5%;
     padding: 0;
     /* background-image: url("https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif"); */
+    background-color: #444;
     background-size: cover;
     font-family: "Verdana", sans-serif;
     font-weight: 100;
@@ -9,11 +9,59 @@ body{
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
+
+html,body{
+    width: 100%;
+    height: 100%;
+}
+
+header{
+    justify-self: flex-start;
+
+    overflow: hidden;
+}
+
 h1{
-    align-self: flex-start;
+    /* align-self: flex-start; */
+}
+
+.about{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.aboutImg{
+
+}
+
+.aboutTxt{
+
+}
+
+.memberImg{
+    border-radius: 100%;
+    width: 10%;
+    height: 10%;
+}
+
+.calciferSpeaks{
+    flex-grow: 10;
+    flex-flow: row wrap;
+}
+
+#calcifer{
+    align-self: flex-end;
+    border-radius: 100%;
+    width: 10%;
+    height: 10%;
+}
+
+#speaks{
+
 }
 
 .main{
