--- a/index.css
+++ b/index.css
@@ -80,3 +80,31 @@ button:hover {
     display: flex;
     justify-content: center;
 }
+
+.sidebar {
+    height: 100%; 
+    width: 160px; 
+    position: fixed; 
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: black;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+.sidebar a:hover {
+    color: #f1f1f1;
+}
+
+html {
+    scroll-behavior: smooth;
+}
