--- a/cohorts/1/index.css
+++ b/cohorts/1/index.css
@@ -1,291 +1,213 @@
-body{
-    padding: 0;
-    /* background-image: url("https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif"); */
-    background-color: #444;
-    background-size: cover;
-    font-family: "Verdana", sans-serif;
-    font-weight: 100;
-    text-align: center;
-    color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+:root {
+  font-size: 16px;
+  font-family: "Open Sans";
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
 }
 
-html,body{
-    width: 100%;
-    height: 100%;
-}
-
-header{
-    justify-self: flex-start;
-
-    overflow: hidden;
-}
-
-h1{
-    /* align-self: flex-start; */
-}
-
-.about{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.aboutImg{
-
-}
-
-.aboutTxt{
-
-}
-
-.memberImg{
-    border-radius: 100%;
-    width: 10%;
-    height: 10%;
-}
-
-.calciferSpeaks{
-    flex-grow: 10;
-    flex-flow: row wrap;
-}
-
-#calcifer{
-    align-self: flex-end;
-    border-radius: 100%;
-    width: 10%;
-    height: 10%;
-}
-
-#speaks{
-
-}
-
-.main{
-    color: white;
-    margin: auto;
-    font-size: 40px;  
-    
-}
-div{
-    font-size: 35px;
-}
-.welcome{
-    font-size: 35px;
-    align-self: flex-start;
-    text-align: center;
-    width: 100%;
-}
-.box { 
-    width: 600px;
-    background: rgba(239, 243, 241, 0.4);
-    padding: 40px;
-    text-align: left;
-    margin: auto;
-    margin-top: 5%;
-    color: rgb(248, 69, 69);
-}
-
-.box:hover{
-    background: rgba(0, 0, 0, 0.472);
-}
-a:link{
-    color: white;
-}
-a:visited{
-    color: gray;
-}
-.calcifer{
-    width: 600px;
-    background: rgba(239, 243, 241, 0.4);
-    padding: 40px;
-    text-align: left;
-    margin: auto;
-    margin-top: 5%;
-}
-.calcifer:hover{
-    color: red;
-}
-
-/* extra stuff i am trying  */
-.members{
-    list-style-type: none;
-}
-/* Basic styling */
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
 body {
-    font-family: sans-serif;
-    font-size: 16px;
+  color: black;
+  background-color: white;
+  margin: 0;
+  padding: 0;
 }
-nav {
-    background: #222;
-    padding: 0 15px;
+
+body::-webkit-scrollbar {
+  width: 0.25rem;
 }
-a {
-    color: white;
-    text-decoration: none;
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
 }
-.menu,
-.submenu {   
-    list-style-type: none;
+
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
 }
+
+main {
+  margin-left: 5rem;
+  padding: 1rem;
+}
+
+.navbar {
+  position: fixed;
+  background-color: var(--bg-primary);
+  transition: width 600ms ease;
+  overflow: scroll;
+}
+
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.nav-item {
+  width: 100%;
+}
+
+.nav-item:last-child {
+  margin-top: auto;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
+}
+
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  background: var(--bg-secondary);
+  color: var(--text-secondary);
+}
+
+.link-text {
+  display: none;
+  margin-left: 1rem;
+}
+
+.nav-link svg {
+  width: 2rem;
+  min-width: 2rem;
+  margin: 0 1.5rem;
+}
+
+.fa-primary {
+  color: #ff7eee;
+}
+
+.fa-secondary {
+  color: #df49a6;
+}
+
+.fa-primary,
+.fa-secondary {
+  transition: var(--transition-speed);
+}
+
 .logo {
-    font-size: 20px;
-    padding: 7.5px 10px 7.5px 0;
-}
-.item {
-    padding: 10px;
-}
-.item.button {
-    padding: 9px 5px;
-}
-.item:not(.button) a:hover,
-.item a:hover::after {
-    color: #ccc;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: var(--text-secondary);
+  background: var(--bg-secondary);
+  font-size: 1.5rem;
+  letter-spacing: 0.3ch;
+  width: 100%;
 }
 
-/* Mobile menu */
-.menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+.logo svg {
+  transform: rotate(0deg);
+  transition: var(--transition-speed);
 }
-.menu li a {
-    display: block;
-    padding: 15px 5px;
+
+.logo-text {
+  display: inline;
+  position: absolute;
+  left: -999px;
+  transition: var(--transition-speed);
 }
-.menu li.subitem a {
-    padding: 15px;
+
+.navbar:hover .logo svg {
+  transform: rotate(-180deg);
 }
-.toggle {
-    order: 1;
-    font-size: 20px;
-}
-.item.button {
-    order: 2;
-}
-.item {
-    order: 3;
-    width: 100%;
-    text-align: center;
+
+/* Small screens */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+  }
+
+  .logo {
     display: none;
-}
-.active .item {
-    display: block;
-}
-.button.secondary { /* divider between buttons and menu links */
-    border-bottom: 1px #444 solid;
+  }
+
+  .navbar-nav {
+    flex-direction: row;
+  }
+
+  .nav-link {
+    justify-content: center;
+  }
+
+  main {
+    margin: 0;
+  }
 }
 
-/* Submenu up from mobile screens */
-.submenu {
+/* Large screens */
+@media only screen and (min-width: 600px) {
+  .navbar {
+    top: 0;
+    width: 5rem;
+    height: 100vh;
+  }
+
+  .navbar:hover {
+    width: 16rem;
+  }
+
+  .navbar:hover .link-text {
+    display: inline;
+  }
+
+  .navbar:hover .logo svg {
+    margin-left: 11rem;
+  }
+
+  .navbar:hover .logo-text {
+    left: 0px;
+  }
+}
+
+/* .dark {
+    --text-primary: #b6b6b6;
+    --text-secondary: #ececec;
+    --bg-primary: #23232e;
+    --bg-secondary: #141418;
+  }
+  
+  .light {
+    --text-primary: #1f1f1f;
+    --text-secondary: #000000;
+    --bg-primary: #ffffff;
+    --bg-secondary: #e4e4e4;
+  }
+  
+  .solar {
+    --text-primary: #576e75;
+    --text-secondary: #35535c;
+    --bg-primary: #fdf6e3;
+    --bg-secondary: #f5e5b8;
+  }
+  
+  .theme-icon {
     display: none;
-}
-.submenu-active .submenu {
-   display: block;
-}
-.has-submenu i {
-    font-size: 12px;
-}
-.has-submenu > a::after {
-    font-family: "Font Awesome 5 Free";
-    font-size: 12px;
-    line-height: 16px;
-    font-weight: 900; 
-    content: "\f078";
-    color: white;
-    padding-left: 5px;
-}
-.subitem a {
-    padding: 10px 15px;
-}
-.submenu-active {
-    background-color: #111;
-    border-radius: 3px;
-}
-
-
-/* Tablet menu */
-@media all and (min-width: 700px) {
-    .menu {
-        justify-content: center;
-    }
-    .logo {
-        flex: 1;
-    }
-    .item.button {
-        width: auto;
-        order: 1;
-        display: block;
-    }
-    .toggle {
-        flex: 1;
-        text-align: right;
-        order: 2;
-    }
-    /* Button up from tablet screen */
-    .menu li.button a {
-        padding: 10px 15px;
-        margin: 5px 0;
-    }
-    .button a {
-        background: #0080ff;
-        border: 1px royalblue solid;
-    }
-    .button.secondary {
-        border: 0;
-    }
-    .button.secondary a {
-        background: transparent;
-        border: 1px #0080ff solid;  
-    }
-    .button a:hover {
-        text-decoration: none;
-    }
-    .button:not(.secondary) a:hover {
-        background: royalblue;
-        border-color: darkblue;
-    }
-}
-
-/* Desktop menu */
-@media all and (min-width: 960px) {
-    .menu {
-        align-items: flex-start;     
-        flex-wrap: nowrap;
-        background: none;
-    }
-    .logo {
-        order: 0;
-    }
-    .item {
-        order: 1;
-        position: relative;
-        display: block; 
-        width: auto;
-    }
-    .button {
-        order: 2;
-    }
-    .submenu-active .submenu {
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 68px;
-        background: #111;
-    }
-    .toggle {
-        display: none;
-    }
-    .submenu-active {
-        border-radius: 0;
-    }
-}
+  }
+  
+  .dark #darkIcon {
+    display: block;
+  }
+  
+  .light #lightIcon {
+    display: block;
+  }
+  
+  .solar #solarIcon {
+    display: block;
+  } */
