--- a/cohorts/1/index.css
+++ b/cohorts/1/index.css
@@ -10,7 +10,7 @@
 
 body {
   color: black;
-  background-color: white;
+  background-color: #D3EDEE;
   margin: 0;
   padding: 0;
 }
@@ -28,6 +28,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 main {
+  margin-top: 12rem;
   margin-left: 5rem;
   padding: 1rem;
 }
@@ -174,7 +175,70 @@ main {
     left: 0px;
   }
 }
+/*
+CSS for Animation
+*/
+.container {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+}
+.container span{
+    text-transform: uppercase;
+    display: block;
+}
 
+.TopText{
+    color: white;
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 8px;
+    margin-bottom: 20px;
+    background: #23232e;
+    position: relative;
+    animation: text1 6s 1;
+}
+
+.BottomText{
+    font-size: 40px;
+    font-weight: 550;
+    text-shadow: 4px 4px #23232e; 
+    color: #CE2029;
+    animation: text2 3s 1.5;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+}
+
+@keyframes text1 {
+    0%{
+        color: #23232e;
+        margin-bottom: -40px;
+    }
+    30%{
+        letter-spacing: 25px;
+        margin-bottom: -40px;
+    }
+    85%{
+        letter-spacing: 8px;
+        margin-bottom: -40px;
+    }
+    90%{
+        display: none;
+        opacity: 0%;
+    }
+}
+
+@keyframes text2 {
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 1%;
+    }
+}
 /* .dark {
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
