--- a/cohorts/1/index.css
+++ b/cohorts/1/index.css
@@ -2,7 +2,7 @@
   font-size: 16px;
   font-family: "Open Sans";
   --text-primary: #b6b6b6;
-  --text-secondary: #ececec;
+  --text-secondary: #ff6200;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --transition-speed: 600ms;
@@ -24,7 +24,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background:  #545473;
+  background: var(--text-secondary);
   /* #6649b8; */
 }
 
@@ -37,18 +37,18 @@ main {
   flex-direction: row;
   align-self: center;
 }
-main img{
+main img {
   border-radius: 50%;
   padding: 50px;
 }
-.intro{
+.intro {
   width: 100%;
   background-color: #e5dce1;
   padding: 2%;
   margin: 3%;
   border-radius: 5%;
 }
-.motto img{
+.motto img {
   width: 5%;
   padding: 0%;
 }
@@ -143,7 +143,7 @@ main img{
 }
 
 .navbar:hover .logo svg {
-  transform: rotate(-180deg);
+  /* transform: rotate(-180deg); */
 }
 
 /* Small screens */
@@ -199,239 +199,199 @@ main img{
 CSS for Animation
 */
 .container {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
-.container span{
-    text-transform: uppercase;
-    display: block;
-}
-
-.TopText{
-    color: white;
-    font-size: 60px;
-    font-weight: 700;
-    letter-spacing: 8px;
-    margin-bottom: 20px;
-    background: #23232e;
-    position: relative;
-    animation: text1 6s 1;
+.container span {
+  text-transform: uppercase;
+  display: block;
 }
 
-.BottomText{
-    font-size: 40px;
-    font-weight: 550;
-    text-shadow: 4px 4px #23232e; 
-    color: #CE2029;
-    animation: text2 3s 1.5;
-    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+.TopText {
+  color: white;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  margin-bottom: 20px;
+  background: #23232e;
+  position: relative;
+  animation: text1 6s 1;
+}
+
+.BottomText {
+  font-size: 40px;
+  font-weight: 550;
+  text-shadow: 4px 4px #23232e;
+  color: var(--text-secondary);
+  animation: text2 3s 1.5;
+  /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 
 @keyframes text1 {
-    0%{
-        color: #23232e;
-        margin-bottom: -40px;
-    }
-    30%{
-        letter-spacing: 25px;
-        margin-bottom: -40px;
-    }
-    85%{
-        letter-spacing: 8px;
-        margin-bottom: -40px;
-    }
-    90%{
-        display: none;
-        opacity: 0%;
-    }
+  0% {
+    color: #23232e;
+    margin-bottom: -40px;
+  }
+  30% {
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85% {
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+  90% {
+    display: none;
+    opacity: 0%;
+  }
 }
 
 @keyframes text2 {
-    0%{
-        opacity: 0%;
-    }
-    100%{
-        opacity: 1%;
-    }
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 1%;
+  }
 }
-/* .dark {
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-  }
-  
-  .light {
-    --text-primary: #1f1f1f;
-    --text-secondary: #000000;
-    --bg-primary: #ffffff;
-    --bg-secondary: #e4e4e4;
-  }
-  
-  .solar {
-    --text-primary: #576e75;
-    --text-secondary: #35535c;
-    --bg-primary: #fdf6e3;
-    --bg-secondary: #f5e5b8;
-  }
-  
-  .theme-icon {
-    display: none;
-  }
-  
-  .dark #darkIcon {
-    display: block;
-  }
-  
-  .light #lightIcon {
-    display: block;
-  }
-  
-  .solar #solarIcon {
-    display: block;
-  } */
 
+/* Marlene */
+#info {
+  position: absolute;
+  /* list-style-image: url("./assets/fire-solid.svg"); */
+  font-size: medium;
+  width: 100%;
+  display: flex;
+  padding-top: 0.25%;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: row;
+}
+#infoColor {
+  background-color: #e5dce1;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  border-radius: 2%;
+}
+#infoImg img {
+  border-radius: 5%;
+  max-width: 50%;
+  height: auto;
+  padding: 20px;
+  margin-right: 0%;
+}
+.infoContent {
+  list-style-image: url("./assets/fire-solid.svg");
+  /* list-style: none; */
+  margin: 2.5%;
+  background-color: #fdf0d8;
+  padding: 20px;
+  height: auto;
+  width: 100%;
+  display: flex;
+  align-self: stretch;
+  flex-direction: column;
+  align-content: stretch;
+}
+#calciferBoi {
+  position: absolute;
+  left: 22%;
+  top: 1.5%;
 
-  /* Marlene */
-  #info{
-    position: absolute;
-    /* list-style-image: url("./assets/fire-solid.svg"); */
-    font-size: medium;
-    width: 100%;
-    display: flex;
-    padding-top: 0.25%;
-    /* align-items: center; */
-    justify-content: center;
-    flex-direction: row;
-  }
-  #infoColor{
-    background-color: #e5dce1;
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    border-radius: 2%;
-  }
-  #infoImg img{
-    border-radius: 5%;
-    max-width: 50%;
-    height: auto;
-    padding: 20px;
-    margin-right: 0%;
-  }
-  .infoContent{
-    list-style-image: url("./assets/fire-solid.svg");
-    /* list-style: none; */
-    margin: 2.5%;
-    background-color: #fdf0d8;
-    padding: 20px;
-    height: auto;
-    width: 100%;
-    display: flex;
-    align-self: stretch;
-    flex-direction: column;
-    align-content: stretch;
-  }
-  #calciferBoi{
-    position: absolute;
-    left: 22%;
-    top: 1.5%;
+  background: white;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 3px solid #ce2029;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#calciferBoi img {
+  background: #efeff4;
+  border-radius: 20px;
+  height: 48px;
+  width: 48px;
+}
+#infoContent span {
+  font-weight: bold;
+}
 
-    background: white;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: 3px solid #ce2029;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  #calciferBoi img{
-    background: #EFEFF4;
-    border-radius: 20px;
-    height: 48px;
-    width: 48px;
-  }
-  #infoContent span{
-    font-weight: bold;
-  }
+#social {
+  /* height: 5%; */
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  /* margin: 100%; */
+}
 
-  #social{
-    /* height: 5%; */
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    align-self: flex-end;
-    /* margin: 100%; */
-  }
-
-  #social a:link{
-    color: #ce2029;
-    /* text-decoration: none;
+#social a:link {
+  color: #ce2029;
+  /* text-decoration: none;
     font-size: 60px;
     transition: all ease-in-out 250ms; */
-  }
-  #social a:hover{
-    color: white;
-  }
+}
+#social a:hover {
+  color: white;
+}
 
-  /* Emily */
-  #If2{
-    position: absolute;
-    /* list-style-image: url("./assets/fire-solid.svg"); */
-    font-size: medium;
-    width: 100%;
-    height: 50%;
-    display: flex;
-    padding-top: 0.25%;
-    /* align-items: center; */
-    justify-content: center;
-    flex-direction: row;
-  }
-  #infoC2{
-    background-color:  #e5dce1;
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    border-radius: 2%;
-  }
-  #infoI2 img{
-    border-radius: 5%;
-    max-width: 70%;
-    height: auto;
-    padding: 20px;
-    margin-right: 0%;
-  }
-  .infoCont2{
-    list-style-image: url("./assets/fire-solid.svg");
-    /* list-style: none; */
-    margin: 2.5%;
-    background-color: #f9d7b4;
-    padding: 20px;
-    height: auto;
-    width: 100%;
-    display: flex;
-    align-self: stretch;
-    flex-direction: column;
-    align-content: stretch;
-  }
+/* Emily */
+#If2 {
+  position: absolute;
+  /* list-style-image: url("./assets/fire-solid.svg"); */
+  font-size: medium;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  padding-top: 0.25%;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: row;
+}
+#infoC2 {
+  background-color: #e5dce1;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  border-radius: 2%;
+}
+#infoI2 img {
+  border-radius: 5%;
+  max-width: 70%;
+  height: auto;
+  padding: 20px;
+  margin-right: 0%;
+}
+.infoCont2 {
+  list-style-image: url("./assets/fire-solid.svg");
+  /* list-style: none; */
+  margin: 2.5%;
+  background-color: #f9d7b4;
+  padding: 20px;
+  height: auto;
+  width: 100%;
+  display: flex;
+  align-self: stretch;
+  flex-direction: column;
+  align-content: stretch;
+}
 
-  #contactUs{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15%;
-    margin-left: 27.5%;
-    
-  }
-  
-
+#contactUs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15%;
+  margin-left: 27.5%;
+}
